2002-01-23  Richard Henderson  <rth@redhat.com>

	PR libstdc++/5198
	* config/cpu/m68k/bits/atomicity.h (__exchange_and_add): Only use
	CAS on the cpu variants that support it.  Add versions that use
	TAS and that disable interrupts.
	(__atomic_add): Use __exchange_and_add to guarantee atomicity.

2002-01-23  Matt Kraai  <kraai@alumni.cmu.edu>

	* include/bits/locale_facets.tcc: Remove old comments.

2002-01-23  Andreas Tobler  <toa@pop.agri.ch>

	* include/bits/locale_facets.tcc (__convert_to_v): Change template
	parameter to _Tv.
	(__convert_from_v): Same.
	
2002-01-23  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/locale_facets.h (num_get::_M_extract_int): Change
	prototype.
	* include/bits/locale_facets.tcc (num_get::_M_extract_int): Remove
	__max_digits checks, adjust arguments.
	(num_get::do_get(*)): Changeup.

2002-01-23  Loren Rittle <ljrittle@acm.org>

        * config/locale/c_locale_generic.cc: Fix typename usage.

2002-01-22  Benjamin Kosnik  <bkoz@redhat.com>

	* config/locale/c_locale_generic.cc: Fix.

2002-01-22  Benjamin Kosnik  <bkoz@redhat.com>

	* docs/html/22_locale/messages.html: Remove angle brackets.
	* docs/html/17_intro/TODO: Add.
	
2002-01-22  Paolo Carlini  <pcarlini@unitus.it>

	* testsuite/27_io/ios_manip_basefield.cc: Enable test02.
	* testsuite/27_io/ostream_inserter_arith.cc: Enable test03.
	* testsuite/27_io/ostream_inserter_char.cc: Enable test01.
	* testsuite/27_io/ostream_inserter_other.cc: Enable test04.

2002-01-22  Benjamin Kosnik  <bkoz@redhat.com>

	Audit for LANG independence.
	* include/bits/localefwd.h: Tweaks.
	* include/bits/locale_facets.tcc (money_get::do_get(long double)):
	Use __convert_to_v.
	(time_get::do_get_year): Same.
	(__convert_from_v): Add.
	(num_put::_M_convert_float): Use.
	(num_put::_M_convert_int): Same.
	(money_put::do_put): Same.
	
	* src/locale-inst.cc: Add instantiations for __convert_from_v.
	* config/locale/time_members_gnu.cc: Cleanup setlocale usage.